# jaws-transfers

./: config.ini  docker-compose.yml  pyproject.toml
apptainer/: redis.def
jaws_transfers/: celery.py  celery_app.py  celeryconfig.py  config.py  rabbitmq_listener.py  sender.py  tasks.py
